<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.sarahahmad.musicalsapp.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/LabelStyle"
            android:text="@string/PlayingListsActivity" />

        <TextView
            android:id="@+id/PlayingListText"
            style="@style/CategoryStyle"
            android:text="@string/textPlayingListsActivity" />

        <Button
            android:id="@+id/nowplayOnPL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/NowPlayingActivity" />

        <Button
            android:id="@+id/uploadOnPL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/UploadActivity" />

        <Button
            android:id="@+id/back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Home" />

    </LinearLayout>
</ScrollView>